--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "env-var-validator-cli",
+  "name": "env-var-validator",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "CLI to validate .env files against JSON schema. Flag missing/invalid vars, secrets (pro exports).",
+  "main": "index.js",\n    "bin": {"env-validate": "./index.js"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["env", "dotenv", "validate", "json-schema", "devops", "cli"],
+  "author": "Clawdbot &lt;bot@clawd.bot&gt;",
+  "license": "MIT",
   "type": "commonjs",
   "dependencies": {
     "ajv": "^8.17.1",
